--- a/templates/index.html
+++ b/templates/index.html
@@ -1,515 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-<!-- <base href="https://fs8.formsite.com/1GNJPX/" /> -->
-<!-- <title>Telco Customer Churn</title>
-<link rel="stylesheet" media="all" href="/include/form/fonts8.css?2172824315944" />
-<link rel="stylesheet" media="all" href="/include/form/screen8.css?2172824315944" />
-<link rel="stylesheet" media="print" href="/include/form/print8.css?2172824315944" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" media="screen" href="/include/form/responsive8.css?2172824315944" /> -->
-<style media="all">
-/* LOOK AND FEEL */
-body {
-	background: #EBF4F7;
-	background-size: cover;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
-	background-position: 50% 50%;
-}
-
-.form_table {
-	width: 700px;
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 0;
-	border: 1px solid #DFE4EE;
-	background: #FFFFFF;
-	background-size: cover;
-	color: #575B66;
-	overflow: hidden;
-	box-shadow: none;
-	background-position: 50% 50%;
-}
-
-.form_table a {
-	color: #E8BC63;
-}
-
-.outside a {
-	color: #E8BC63;
-}
-
-.form_table a:visited {
-	color: #E8BC63;
-}
-
-.outside a:visited {
-	color: #E8BC63;
-}
-div#q76 {
-    margin-left: 4px;
-    margin-right: 4px
-}
-  div#q73 {
-    margin-left: 4px;
-    margin-right: 4px
-}
-.segment_header {
-	width: auto;
-	margin: 10px;
-	color: #FFFFFF;
-	background: #1282A2;
-	background-size: cover;
-	background-repeat: repeat;
-	background-position: 50% 50%;
-	border-radius: 0;
-}
-
-.segment_header h1 {
-	border-radius: 0;
-	padding: 20px 10px;
-	font-family: 'Roboto',sans-serif;
-}
-
-  
-.q {
-	/* padding: 10px; */
-	margin-bottom: 15px;
-	margin-left: 15px;
-	/* float: left; */
-	display: block;
-}
-
-.q .question {
-	color: #3a3c43;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-}
-
-.q .left_question_first {
-	width: 15em;
-}
-
-.q .top_question {
-	margin-bottom: 10px;
-}
-
-.q .text_field {
-	background: #F5FAFB;
-	border: 1px solid #BEDDE6;
-	border-radius: 2px;
-	border-width: 1px;
-	color: #3A3C43;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
-	margin: 1px 0;
-	padding: 10px;
-}
-
-.q .file_upload {
-	background: #F5FAFB;
-	border: 1px solid #BEDDE6;
-	border-radius: 2px;
-	border-width: 1px;
-	color: #3A3C43;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
-	margin-top: 1px;
-	padding: 10px;
-}
-
-.q .file_upload_button {
-	margin-top: 2px;
-}
-
-.q .inline_grid td {
-	padding: 5px;
-}
-
-.q .choices input[type="checkbox"]:checked + label::before {
-	color: #1282a2;
-}
-
-.q .choices input[type="radio"]:checked + label::before {
-	color: #1282a2;
-}
-
-.q .drop_down {
-	background: #F5FAFB;
-	border: 1px solid #BEDDE6;
-	border-radius: 2px;
-	border-width: 1px;
-	color: #3A3C43;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
-	margin: 1px 0;
-	padding: 9px;
-}
-
-.q .matrix th {
-	color: #575B66;
-	background: #F5FAFB;
-	padding: 5px;
-	font-weight: bold;
-}
-
-.q .matrix td {
-	padding: 5px;
-	border-bottom: 1px solid #BEDDE6;
-	border-top: 1px solid #BEDDE6;
-}
-
-.q .matrix td.question {
-	border-right: 1px solid #BEDDE6;
-	font-weight: normal;
-}
-
-.q .matrix .multi_scale_sub th {
-	font-weight: normal;
-	border-top: 1px solid #BEDDE6 !important;
-	background: #FFFFFF;
-}
-
-.q .matrix .multi_scale_break {
-	border-right: 1px solid #BEDDE6;
-}
-
-.q .matrix_row_dark td {
-	color: #575B66;
-	background: #FFFFFF;
-}
-
-.q .matrix_row_dark td.question {
-	color: #575B66;
-	background: #F5FAFB;
-}
-
-.q .matrix_row_light td {
-	color: #575B66;
-	background: #FFFFFF;
-}
-
-.q .matrix_row_light td.question {
-	color: #575B66;
-	background: #FFFFFF;
-}
-
-.q .rating_ranking td {
-	padding: 5px;
-}
-
-.q .scroller {
-	border: 1px solid #DFE4EE;
-}
-
-.highlight {
-	background: #FAFBFD !important;
-}
-
-tr.highlight td {
-	background: #FAFBFD !important;
-}
-
-.outside {
-	color: #575B66;
-}
-
-.outside_container {
-	width: 700px;
-	padding: 1em 0;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	color: #575B66;
-}
-
-.outside_container .submit_button {
-	color: #FFFFFF !important;
-    background: #1282A2;
-	background-size: auto;
-	border-style: none;
-	border-width: 0px;
-	border-color: #FFFFFF;
-	border-radius: 2px;
-	text-align: center;
-    font-family:'Roboto Slab',serif;
-	font-size: 17px;
-	font-weight: normal;
-	min-width: 20%;
-    padding: 14px 26px;
-	text-transform: none;
-	box-shadow: none;
-}
-
-.progressBarWrapper {
-	border-radius: 0;
-	background: #FFFFFF;
-	background-size: cover;
-	border-color: #DFE4EE;
-}
-
-.progressBarBack {
-	color: #FFFFFF;
-	background-color: #E8BC63;
-}
-
-.progressBarFront {
-	color: #575B66;
-}
-
-.ui-widget {
-	font-family: 'Roboto',sans-serif;
-}
-
-.invalid {
-	background: #FDF1F0;
-}
-
-.invalid .invalid_message {
-	color: #EC756B;
-	background: #FDF1F0;
-	border: 1px solid #EC756B;
-	border-radius: 2px;
-}
-
-.form_table.invalid {
-	border: 2px solid #EC756B;
-}
-
-.invalid .matrix .invalid_row {
-	background: #FDF1F0;
-}
-
-.outside_container .submit_button:hover, .outside_container .submit_button:focus {
-	background: #001F54;
-	background-size: auto;
-	border-color: #BBBBBB;
-   
-}
-
-.q .number_scale td input:checked + label {
-	color: #1282a2;
-}
-.q .slider_range {
-	font-size: 14px;
-}
-.q .slider_range::-webkit-slider-runnable-track {
-	background: #F5FAFB;
-	border: 1px solid #BEDDE6;
-	border-radius: 2px;
-	border-width: 1px;
-}
-.q .slider_range::-moz-range-track {
-	background: #F5FAFB;
-	border: 1px solid #BEDDE6;
-	border-radius: 2px;
-	border-width: 1px;
-}
-.q .slider_range::-webkit-slider-thumb {
-	border-radius: 4px;
-	background: #1282a2;
-}
-.q .slider_range::-moz-range-thumb {
-	border-radius: 4px;
-	background: #1282a2;
-}
-img.ddd {
-    width: 98%;
-    padding-top: 15px;
-    height: 55%;
-}
-
-table.inline_grid.choices {
-    font-size: 13px;
-    color: #575B66;
-}
-  
-</style>
-<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-<script src="/include/form/form8.js?2172824315944"></script> -->
+    <meta charset="UTF-8">
+    <title>ML Deployment using Heroku</title>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
 </head>
 <body>
-<form action="{{ url_for('predict')}}"method="post">
-<!-- <form method="post" id="FSForm" action="{{ url_for('predict')}}" enctype="application/x-www-form-urlencoded" onsubmit="return Vromansys.Form.processSubmit(this);"> -->
-<!-- BEGIN_ITEMS -->
-<div class="form_table">
+    <div class="prediction">
+        <h1>Customer Churn Prediction</h1>
+        <form action="{{ url_for('predict')}}"method="post">
+		<label for="tenure">Tenure</label>
+		<input type="text" id="tenure" name="tenure" required="required">
+		<br>
+    		<label for="gender">Gender</label>
+    		<select id="gender" name="gender" required="required">
+      			<option value="1">Male</option>
+      			<option value="0">Female</option>
+    		</select>
+    		<br>
+		<label for="seniorcitizen">Senior Citizen</label>
+    		<select id="seniorcitizen" name="seniorcitizen" required="required">
+      			<option value="0">No</option>
+      			<option value="1">Yes</option>
+    		</select>
+    		<br>
+    		<label for="partner">Partner</label>
+    		<select id="partner" name="partner" required="required">
+      			<option value="0">No</option>
+      			<option value="1">Yes</option>
+    		</select>
+    		<br>
+        	<button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+        </form>
 
-<div class="clear"></div>
-
-<div id="q39" class="q full_width">
-<a class="item_anchor" name="ItemAnchor0"></a>
-<div style="text-align:left;"><img src="https://www.pointillist.com/wp-content/uploads/2017/11/Running-4-the-Exit-2-844x422.png" alt="" style="/* width: 98%; height: 58%; *//* align-self: center; */" class="ddd"></div>
-</div>
-
-<div class="clear"></div>
-
-<div id="q76" class="q full_width">
-<a class="item_anchor" name="ItemAnchor1"></a>
-<div class="segment_header" style="width:auto;text-align:Left;"><h1 style="font-size:28px;font-family:'Roboto Slab',serif;padding:20px 1em ;">TELCO CUSTOMER CHURN PREDICTION</h1></div>
-</div>
-
-<div class="clear"></div>
-
-<div id="q77" class="q full_width">
-<a class="item_anchor" name="ItemAnchor2"></a>
-<div class="full_width_space"><div>
-  <div style="text-align: left;padding-left:2px;"><span style="font-size: 16px; font-family: 'Roboto',sans-serif; color: #1282A2">Enter customer's demographic and product usage information to determine likelihood of churn :</i></span></div>
-</div></div>
-</div>
-
-<div class="clear"></div>
-<br/>
-<div id="q43" class="q required">
-    <a class="item_anchor" name="ItemAnchor6"></a>
-    <label class="question top_question" for="RESULT_TextField-6">How many tenure years has the customer been a Telco customer?&nbsp;<b class="icon_required" style="color:#F00">*</b></label><br/><br/>
-
-    <input type="text" name="RESULT_TextField-6" class="text_field" id="RESULT_TextField-6"  size="60" value="20" />  
-</div>
-
-<div class="clear"></div>
-
-<div id="q61" class="q required">
-<a class="item_anchor" name="ItemAnchor4"></a>
-<span class="question top_question">Does the customer qualify as a Senior citizen (>=65)&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_0" value="1" checked/><label for="RESULT_RadioButton-4_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-4" class="multiple_choice" id="RESULT_RadioButton-4_1" value="0" /><label for="RESULT_RadioButton-4_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q62" class="q required">
-<a class="item_anchor" name="ItemAnchor5"></a>
-<span class="question top_question">Does the customer have a partner with whom they utilize Telco services?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_0" value="1" checked/><label for="RESULT_RadioButton-5_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-5" class="multiple_choice" id="RESULT_RadioButton-5_1" value="0" /><label for="RESULT_RadioButton-5_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q59" class="q required">
-    <a class="item_anchor" name="ItemAnchor3"></a>
-    <span class="question top_question">Gender that customer identifies with?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-    <table class="inline_grid choices">
-    <tr><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_0" value="1" checked /><label for="RESULT_RadioButton-3_0">Male</label><td><input type="radio" name="RESULT_RadioButton-3" class="multiple_choice" id="RESULT_RadioButton-3_1" value="0" /><label for="RESULT_RadioButton-3_1">Female</label></tr>
-    </table>
+       <br>
+       <b>{{ prediction_text }}</b>
     </div>
-
-
-<div class="clear"></div>
-
-<div id="q64" class="q required">
-<a class="item_anchor" name="ItemAnchor7"></a>
-<span class="question top_question">Has the customer opted for Telco's phone services?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_0" value="1" checked/><label for="RESULT_RadioButton-7_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-7" class="multiple_choice" id="RESULT_RadioButton-7_1" value="0" /><label for="RESULT_RadioButton-7_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q65" class="q required">
-<a class="item_anchor" name="ItemAnchor8"></a>
-<span class="question top_question">Has the customer opted for Telco's online security service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-8" class="multiple_choice" id="RESULT_RadioButton-8_0" value="1" checked /><label for="RESULT_RadioButton-8_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-8" class="multiple_choice" id="RESULT_RadioButton-8_1" value="0" /><label for="RESULT_RadioButton-8_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q66" class="q required">
-<a class="item_anchor" name="ItemAnchor9"></a>
-<span class="question top_question">Has the customer opted for Telco's online backup service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-9" class="multiple_choice" id="RESULT_RadioButton-9_0" value="1" checked /><label for="RESULT_RadioButton-9_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-9" class="multiple_choice" id="RESULT_RadioButton-9_1" value="0" /><label for="RESULT_RadioButton-9_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q67" class="q required">
-<a class="item_anchor" name="ItemAnchor10"></a>
-<span class="question top_question">Has the customer opted for Telco's device protection&nbsp;service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-10" class="multiple_choice" id="RESULT_RadioButton-10_0" value="1" checked /><label for="RESULT_RadioButton-10_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-10" class="multiple_choice" id="RESULT_RadioButton-10_1" value="0" /><label for="RESULT_RadioButton-10_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q68" class="q required">
-<a class="item_anchor" name="ItemAnchor11"></a>
-<span class="question top_question">Has the customer opted for Telco's tech support service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-11" class="multiple_choice" id="RESULT_RadioButton-11_0" value="1" checked /><label for="RESULT_RadioButton-11_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-11" class="multiple_choice" id="RESULT_RadioButton-11_1" value="0" /><label for="RESULT_RadioButton-11_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q69" class="q required">
-<a class="item_anchor" name="ItemAnchor12"></a>
-<span class="question top_question">Has the customer opted for Telco's paperless billing service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-12" class="multiple_choice" id="RESULT_RadioButton-12_0" value="1" checked /><label for="RESULT_RadioButton-12_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-12" class="multiple_choice" id="RESULT_RadioButton-12_1" value="0" /><label for="RESULT_RadioButton-12_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q70" class="q required">
-<a class="item_anchor" name="ItemAnchor13"></a>
-<span class="question top_question">Has the customer opted for Telco's DSL Internet service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-13" class="multiple_choice" id="RESULT_RadioButton-13_0" value="1" checked /><label for="RESULT_RadioButton-13_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-13" class="multiple_choice" id="RESULT_RadioButton-13_1" value="0" /><label for="RESULT_RadioButton-13_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-<div id="q71" class="q required">
-<a class="item_anchor" name="ItemAnchor14"></a>
-<span class="question top_question">Has the customer opted for Telco's Fiber Optics Internet service?&nbsp;<b class="icon_required" style="color:#F00">*</b></span>
-<table class="inline_grid choices">
-<tr><td><input type="radio" name="RESULT_RadioButton-14" class="multiple_choice" id="RESULT_RadioButton-14_0" value="1" checked /><label for="RESULT_RadioButton-14_0">Yes</label><td><input type="radio" name="RESULT_RadioButton-14" class="multiple_choice" id="RESULT_RadioButton-14_1" value="0" /><label for="RESULT_RadioButton-14_1">No</label></tr>
-</table>
-</div>
-
-<div class="clear"></div>
-
-
-<div class="outside_container">
-<!--     <div class="buttons_reverse"><input type="submit" name="Submit" value="Make Prediction" class="submit_button" id="FSsubmit" /></div> -->
-    <button type="submit" class="submit_button">PREDICT CHURN
-    </div>
-
- 
-<div class="clear"></div>
-
-<div id="q73" class="q full_width">
-<a class="item_anchor" name="ItemAnchor15"></a>
-<div class="segment_header" style="width:auto;text-align:center;"><h1 style="font-size:16px;font-family:'Roboto Slab',serif;padding:20px 1em ;">{{ prediction_text }}</h1></div>
-</div>
-      
-<!-- <div id="q79" class="q full_width">
-<a class="item_anchor" name="ItemAnchor16"></a>
-<div class="full_width_space"><div>
-<div style="text-align: left;"><span style="font-size: 15px; font-family: 'Roboto Slab', serif;color:black;">{{ prediction_text }}</span></div> -->
-</div></div>
-<!-- <!-- </div> -->
-<!-- {{ prediction_text }} -->
-<div class="clear"></div>
-
-<div style="position:relative;font-family:'Open Sans',Helvetica,Arial,sans-serif;font-size:12px;line-height:36px;text-align:center;background-color:#FAFAFA;height:35px;margin-top:10px;overflow:hidden;">
-<span style="display:inline;margin-right:10px;line-height:38px;font-family:Questrial,sans-serif;text-transform:uppercase;color:#A3A3A3;font-size:10px;letter-spacing:2px;white-space:nowrap;">MODEL AND UI CREATED, DESIGNED AND DEPLOYED BY MEGHNA ASHOK @ 2022</span></a>
-</div>
-</div>
-<!-- END_ITEMS -->
-</form>
 </body>
 </html>
